--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 :root {
     --background: #ffffff;
     --foreground: #171717;
+    --text-color: #444746;
+    --x-grey: #f7f9fb;
+    --x-grey-dark: #e2e7eb;
 }
 
 @theme inline {
@@ -10,8 +13,8 @@
     --color-foreground: var(--foreground);
     --font-sans: var(--font-geist-sans);
     --font-mono: var(--font-geist-mono);
-    --color-gray-400: #f0f4f9;
-    --color-gray-500: #e2e7eb;
+    --color-x-grey: var(--x-grey);
+    --color-x-grey-dark: var(--x-grey-dark);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,13 +25,24 @@
 }
 
 body {
-    background: var(--background);
-    color: var(--foreground);
-    font-family: Arial, Helvetica, sans-serif;
+    /* background: var(--background);
+    color: var(--foreground); */
+    /* font-family: Arial, Helvetica, sans-serif; */
+    color: var(--text-color);
 }
 
 .sidebar-container {
     display: none;
+}
+
+.header {
+    width: 100%;
+    height: 60px;
+    border-bottom: solid 1px var(--color-x-grey-dark);
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 0 16px;
 }
 
 @media (min-width: 1024px) {
