--- a/components/SideBar.css
+++ b/components/SideBar.css
@@ -46,3 +46,9 @@
     flex-direction: column;
     overflow-y: auto;
 }
+
+@media (max-width: 1280px) {
+    .sidebar {
+        display: none;
+    }
+}
